Revision history for {{$dist->name}}

{{$NEXT}}

0.22      2014-06-19 15:33:56 -0400
  - Mojo 5.x compat (testing only)

0.21      2014-04-08 12:52:51 -0400
  - Perl 5.8 support
    Only useful if you force install Protocol::WebSocket, since it
    has a failing test on 5.8

0.20      2013-11-05 10:19:20 -0500
  - prevent multiple finish callbacks in unusual cases (Toshio Ito gh#15)

0.19      2013-11-04 07:26:19 -0500
  [AE::WS::Connection enhacements (thanks Toshio Ito)]
  - Automatically respond to a close frame with a close frame (RFC6455 5.5.1)
  - Make sure "finish" callbacks are called only once.
  - Automatically shutdown the socket on "finish" event. This makes sure EOF signal is sent to the peer.
  - Refuse to send/receive frames after it sends/receives a close frame. (RFC6455 1.4, 5.5.1)
  - Abort the connection when it receives a too huge message. The size limit is imposed by Protocol::WebSocket::Frame (RFC6455 10.4)
  - Automatically respond to a ping frame with a pong frame of the same payload (RFC6455 5.5.2, 5.5.3)
  - Add "masked" attribute. If set, outgoing frames are masked.
  - Client's Connection now sets masked => true (RFC6455 5.3, 6.1).
  - documentation

0.18      2013-10-21 14:55:47 -0400
  - documentation

0.17      2013-10-16 10:58:41 -0400
  - public API for creating Connection instance (thanks Toshio Ito gh#10)
  - bug fix messages sent by server immediately after connect may have been lost (thanks Toshio Ito gh#12)

0.16      2013-10-15 13:05:36 -0400
  - skip ssl test if you have a bad combination of Mojolicious and Net::SSLeay (gh#11)

0.15      2013-10-10 13:20:00 -0400
  - actually require moo 1.001000, and use scalar default value
    that feature should have been there to begin with.

0.14      2013-10-10 13:09:42 -0400
  - fix older Moo compat

0.12      2013-10-10 07:07:42 -0400
  - deprecate on_next_message, on_each_message and on_finish
    (use $connection->on($event => sub { }) instead